--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>My AngularJS App</title>
   <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
   <ul class="menu">
@@ -24,5 +25,31 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+
+  <script src="lib/bootstrap/bootstrap.min.js"></script>
+  <script src="lib/jquery/jquery-2.0.2.min.js"></script>
+  <script src="lib/kineticjs/kinetic-v4.5.4.min.js"></script>
+  <script src="lib/soundmanager/script/soundmanager2.js"></script>
+  <script src="js/player.js"></script>
+  <script src="lib/wooice/player.js"></script>
+  <script src="lib/wooice/wave.js"></script>
+
+
+
+  <script>
+      var waveData = [];
+
+      for(var i =0; i< 1800; i++)
+      {
+          waveData[i] = Math.random();
+      }
+      var player = new $.player({
+          id: 1,
+          waveData: waveData,
+          url: 'resources/test8bit.wav'
+      });
+      player.renderSound();
+  </script>
+
 </body>
 </html>
