--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,10 @@
       var player = new $.player({
           id: 1,
           waveData: waveData,
-          url: 'resources/test8bit.wav'
+          url: 'resources/test8bit.wav',
+          poster: '',
+          title: '',
+          owner: {alis:'', route:''}
       });
       player.renderSound();
   </script>
