--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,8 @@
           url: 'resources/test8bit.wav',
           poster: 'resources/images.jpg',
           title: 'Aren\'t u glad',
-          owner: {alis:'', route:''}
+          owner: {alis:'', route:''},
+          duration: 120*1000
       });
       player.renderSound();
   </script>
