--- a/app/index.html
+++ b/app/index.html
@@ -33,14 +33,13 @@
 
   <script src="lib/jquery/jquery-2.0.2.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="lib/kineticjs/kinetic-v4.5.4.min.js"></script>
+  <script src="http://code.createjs.com/createjs-2013.05.14.min.js"></script>
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
   <script src="lib/imsky-holder/holder.js"></script>
 
   <script src="js/player.js"></script>
-  <script src="lib/wooice/wave.js"></script>
+  <script src="lib/wooice/wave-easelJs.js"></script>
   <script src="lib/wooice/player.js"></script>
-  <script src="lib/wooice/wave.js"></script>
   <script type="text/javascript">
       var waveData = [];
 
