--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,9 @@
   <script src="lib/imsky-holder/holder.js"></script>
 
   <script src="js/player.js"></script>
-  <script src="lib/wooice/wave-easelJs.js"></script>
+  <script src="lib/wooice/wave.js"></script>
   <script src="lib/wooice/player.js"></script>
+  <script src="lib/wooice/waveForm.js"></script>
   <script type="text/javascript">
       var waveData = [];
 
