--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,23 @@
   <link rel="stylesheet" href="lib/Buttons/css/buttons.css">
   <link rel="stylesheet" href="css/app.css"/>
 
+  <!-- Upload -->
+  <!-- Bootstrap CSS Toolkit styles -->
+  <link rel="stylesheet" href="http://blueimp.github.io/cdn/css/bootstrap.min.css">
+  <!-- Generic page styles -->
+  <link rel="stylesheet" href="css/upload/style.css">
+  <!-- Bootstrap styles for responsive website layout, supporting different screen sizes -->
+  <link rel="stylesheet" href="http://blueimp.github.io/cdn/css/bootstrap-responsive.min.css">
+  <!-- blueimp Gallery styles -->
+  <link rel="stylesheet" href="http://blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+  <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
+<link rel="stylesheet" href="css/upload/jquery.fileupload-ui.css">
 </head>
 <body>
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
+    <li><a href="#/upload">upload</a></li>
   </ul>
 
   <div ng-view></div>
@@ -21,17 +33,19 @@
   <div id="sound_streams">
   </div>
 
+  <!-- jQuery must be loaded BEFORE loading AngularJS, otherwise AngularJS will use jqlite instead of jQuery -->
+  <script src="lib/jquery/jquery-2.0.2.min.js"></script>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/config.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 
-  <script src="lib/jquery/jquery-2.0.2.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
   <script src="lib/imsky-holder/holder.js"></script>
@@ -40,6 +54,22 @@
   <script src="lib/wooice/wave.js"></script>
   <script src="lib/wooice/player.js"></script>
   <script src="lib/wooice/waveForm.js"></script>
+
+  <!-- Upload -->
+  <script src="lib/upload/jquery.ui.widget.js"></script>
+  <script src="lib/upload/jquery.fileupload.js"></script>
+  <script src="lib/upload/jquery.fileupload-ui.js"></script>
+  <!-- The File Upload processing plugin -->
+  <script src="lib/upload/jquery.fileupload-process.js"></script>
+  <!-- The File Upload audio preview plugin -->
+  <script src="lib/upload/jquery.fileupload-audio.js"></script>
+  <!-- The File Upload validation plugin -->
+  <script src="lib/upload/jquery.fileupload-validate.js"></script>
+  <!-- The File Upload Angular JS module -->
+  <script src="lib/upload/jquery.fileupload-angular.js"></script>
+  <!-- The main upload script -->
+  <script src="js/upload.js"></script>
+
   <script type="text/javascript">
       var waveData = [];
 
