--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="musicShare">
 <head>
   <meta charset="utf-8">
   <title>My AngularJS App</title>
@@ -23,8 +23,8 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
+    <li><a href="#/musics">musics</a></li>
+    <li><a href="#/profile">profile</a></li>
     <li><a href="#/upload">upload</a></li>
   </ul>
 
@@ -39,6 +39,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   -->
   <script src="lib/angular/angular.js"></script>
+  <script src="lib/angular/angular-resource.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/services.js"></script>
@@ -86,7 +87,7 @@
           owner: {alias:'Eason Chen', route:'#'},
           duration: 256*1000
       });
-      player.renderSound();
+//      player.renderSound();
   </script>
 </body>
 </html>
