use stream service

--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,7 @@
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
   <script src="lib/imsky-holder/holder.js"></script>
 
+  <script src="js/stream.js"></script>
   <script src="js/player.js"></script>
   <script src="lib/wooice/wave.js"></script>
   <script src="lib/wooice/player.js"></script>
