--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="lib/Buttons/css/buttons.css">
   <link rel="stylesheet" href="css/app.css"/>
-
   <link rel="stylesheet" href="css/upload/jquery.fileupload-ui.css">
 
+    <link rel="stylesheet" href="lib/typeahead.js/typeahead.js-bootstrap.css">
 </head>
 <body>
 
@@ -59,6 +59,7 @@
 <script src="lib/upload/jquery.ui.widget.js"></script>
 <script src="lib/upload/jquery.iframe-transport.js"></script>
 <script src="lib/upload/jquery.fileupload.js"></script>
+<script src="lib/typeahead.js/typeahead.min.js"></script>
   <script src="js/upload.js"></script>
 
 </body>
