--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
 
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.css">
-  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="lib/Buttons/css/buttons.css">
   <link rel="stylesheet" href="css/app.css"/>
@@ -32,6 +31,9 @@
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 
+  <script src="js/user/controller.js"></script>
+  <script src="js/user/server.js"></script>
+
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
   <script src="lib/imsky-holder/holder.js"></script>
@@ -46,7 +48,7 @@
 <script src="lib/upload/jquery.iframe-transport.js"></script>
 <script src="lib/upload/jquery.fileupload.js"></script>
 <script src="lib/typeahead.js/typeahead.min.js"></script>
-  <script src="js/upload.js"></script>
+<script src="js/upload.js"></script>
 
 </body>
 </html>
