--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/upload/jquery.fileupload-ui.css">
   <link rel="stylesheet" href="lib/typeahead.js/typeahead.js-bootstrap.css">
+  <link rel="stylesheet" href="lib/message/css/messenger.css">
+  <link rel="stylesheet" href="lib/message/css/messenger-theme-future.css">
 </head>
 <body>
 
@@ -28,6 +30,8 @@
   <script src="lib/bootstrap/js/bootstrap.js"></script>
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
   <script src="lib/imsky-holder/holder.js"></script>
+
+  <script src="lib/message/js/messenger.min.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
@@ -48,6 +52,6 @@
 <script src="lib/upload/jquery.fileupload.js"></script>
 <script src="lib/typeahead.js/typeahead.min.js"></script>
 <script src="js/upload.js"></script>
-
+<ng-include src="'partials/footer.html'"></ng-include>
 </body>
 </html>
