--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-  <div ng-view></div>
+  <div ng-view ></div>
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.min.js"></script>
   <script src="lib/angular/angular-resource.min.js"></script>
@@ -29,10 +29,10 @@
 
   <script src="lib/bootstrap/js/bootstrap.js"></script>
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
-  <script src="lib/imsky-holder/holder.js"></script>
 
   <script src="lib/message/js/messenger.min.js"></script>
 
+  <script src="js/dateFormat.js"></script>
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/services.js"></script>
@@ -51,7 +51,7 @@
 <script src="lib/upload/jquery.iframe-transport.js"></script>
 <script src="lib/upload/jquery.fileupload.js"></script>
 <script src="lib/typeahead.js/typeahead.min.js"></script>
-<script src="js/upload.js"></script>
-<ng-include src="'partials/footer.html'"></ng-include>
+<script src="js/uploadV2.js"></script>
+
 </body>
 </html>
