--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,8 @@
   <script src="lib/message/js/messenger.min.js"></script>
 
   <script src="js/dateFormat.js"></script>
+  <script src="js/waveExtension.js"></script>
+
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
   <script src="js/services.js"></script>
