--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
   <script src="lib/angular/angular-cookies.min.js"></script>
 
   <script src="lib/jquery/jquery-2.0.2.min.js"></script>
+  <script src="lib/jquery/jquery.cookie.js"></script>
   <script src="lib/underscore.js/underscore-min.js"></script>
   <script src="lib/underscore.js/underscore.string.min.js"></script>
 
@@ -31,20 +32,32 @@
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
 
   <script src="lib/message/js/messenger.min.js"></script>
-
-  <script src="js/dateFormat.js"></script>
-  <script src="js/waveExtension.js"></script>
+  <script src="js/util/dateFormat.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
-  <script src="js/user/controller.js"></script>
-  <script src="js/user/server.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/commonServices.js"></script>
+  <script src="js/proServices.js"></script>
+  <script src="js/headerControllers.js"></script>
+  <script src="js/userStreamController.js"></script>
+  <script src="js/streamControllers.js"></script>
+  <script src="js/commonStreamControllers.js"></script>
+  <script src="js/soundControllers.js"></script>
+  <script src="js/uploadControllers.js"></script>
+  <script src="js/interestControllers.js"></script>
+  <script src="js/footerControllers.js"></script>
+  <script src="js/messageServices.js"></script>
+  <script src="js/userServices.js"></script>
+  <script src="js/directives.js"></script>
+  <script src="js/user/controllers.js"></script>
+  <script src="js/user/services.js"></script>
+  <script src="js/guest/controllers.js"></script>
+  <script src="js/guest/services.js"></script>
+  <script src="js/auth/controllers.js"></script>
+  <script src="js/auth/services.js"></script>
 
-  <script src="js/player.js"></script>
   <script src="lib/wooice/wave.js"></script>
   <script src="lib/wooice/player.js"></script>
   <script src="lib/wooice/waveForm.js"></script>
@@ -53,7 +66,6 @@
 <script src="lib/upload/jquery.iframe-transport.js"></script>
 <script src="lib/upload/jquery.fileupload.js"></script>
 <script src="lib/typeahead.js/typeahead.min.js"></script>
-<script src="js/uploadV2.js"></script>
 
 </body>
 </html>
