bug fix and refactor

--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,9 @@
   <link rel="stylesheet" href="lib/typeahead.js/typeahead.js-bootstrap.css">
   <link rel="stylesheet" href="lib/message/css/messenger.css">
   <link rel="stylesheet" href="lib/message/css/messenger-theme-future.css">
+  <link rel="stylesheet" href="lib/jquery/qtip/css/jquery.qtip.min.css">
 </head>
-<body>
+<body style="">
 
   <div ng-view ></div>
   <script src="lib/angular/angular.js"></script>
@@ -27,6 +28,7 @@
   <script src="lib/jquery/jquery.cookie.js"></script>
   <script src="lib/underscore.js/underscore-min.js"></script>
   <script src="lib/underscore.js/underscore.string.min.js"></script>
+  <script src="lib/jquery/qtip/js/jquery.qtip.min.js"></script>
 
   <script src="lib/bootstrap/js/bootstrap.js"></script>
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
@@ -45,6 +47,8 @@
   <script src="js/streamControllers.js"></script>
   <script src="js/commonStreamControllers.js"></script>
   <script src="js/soundControllers.js"></script>
+  <script src="js/soundSocialController.js"></script>
+  <script src="js/playerController.js"></script>
   <script src="js/uploadControllers.js"></script>
   <script src="js/interestControllers.js"></script>
   <script src="js/footerControllers.js"></script>
