--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="lib/typeahead.js/typeahead.js-bootstrap.css">
   <link rel="stylesheet" href="lib/message/css/messenger.css">
   <link rel="stylesheet" href="lib/message/css/messenger-theme-future.css">
-  <link rel="stylesheet" href="lib/jquery/qtip/css/jquery.qtip.min.css">
 </head>
 <body style="">
 
@@ -28,10 +27,11 @@
   <script src="lib/jquery/jquery.cookie.js"></script>
   <script src="lib/underscore.js/underscore-min.js"></script>
   <script src="lib/underscore.js/underscore.string.min.js"></script>
-  <script src="lib/jquery/qtip/js/jquery.qtip.min.js"></script>
 
   <script src="lib/bootstrap/js/bootstrap.js"></script>
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
+
+  <!--<script src="lib/angular-ui/ui-bootstrap-tpls-0.6.0.js"></script>-->
 
   <script src="lib/message/js/messenger.min.js"></script>
   <script src="js/util/dateFormat.js"></script>
