--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="lib/typeahead.js/typeahead.js-bootstrap.css">
   <link rel="stylesheet" href="lib/message/css/messenger.css">
   <link rel="stylesheet" href="lib/message/css/messenger-theme-future.css">
+  <link rel="stylesheet" href="lib/jquery/qtip2/css/jquery.qtip.min.css">
 </head>
 <body style="">
 
@@ -30,6 +31,7 @@
 
   <script src="lib/bootstrap/js/bootstrap.js"></script>
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
+  <script src="lib/jquery/qtip2/js/jquery.qtip.min.js"></script>
 
   <!--<script src="lib/angular-ui/ui-bootstrap-tpls-0.6.0.js"></script>-->
 
