--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
   <script src="lib/angular/angular-resource.min.js"></script>
   <script src="lib/angular/angular-animate.min.js"></script>
   <script src="lib/angular/angular-cookies.min.js"></script>
+  <script src="lib/angular-storage/angularLocalStorage.js"></script>
 
   <script src="lib/jquery/jquery-2.0.2.min.js"></script>
   <script src="lib/jquery/jquery.cookie.js"></script>
