--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
   <script src="js/uploadControllers.js"></script>
   <script src="js/interestControllers.js"></script>
   <script src="js/footerControllers.js"></script>
+  <script src="js/infringeCtrl.js"></script>
   <script src="js/messageServices.js"></script>
   <script src="js/userServices.js"></script>
   <script src="js/directives.js"></script>
@@ -64,6 +65,8 @@
   <script src="js/guest/services.js"></script>
   <script src="js/auth/controllers.js"></script>
   <script src="js/auth/services.js"></script>
+  <script src="js/admin/services.js"></script>
+  <script src="js/admin/controller.js"></script>
 
   <script src="lib/wooice/wave.js"></script>
   <script src="lib/wooice/player.js"></script>
