--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="wooice">
 <head>
   <meta charset="utf-8">
-  <title>Wooice</title>
+  <title>WOWOICE</title>
 
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.css">
@@ -24,6 +24,7 @@
   <script src="lib/angular/angular-animate.min.js"></script>
   <script src="lib/angular/angular-cookies.min.js"></script>
   <script src="lib/angular-storage/angularLocalStorage.js"></script>
+  <script src="lib/angular-ui/ui-bootstrap-tpls-0.6.0.js"></script>
 
   <script src="lib/jquery/jquery-2.0.2.min.js"></script>
   <script src="lib/jquery/jquery.cookie.js"></script>
