--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,16 @@
 <html lang="en" ng-app="wooice">
 <head>
   <meta charset="utf-8">
-  <title>WOWOICE</title>
+  <meta property="wb:webmaster" content="371bd3642058ba5d" />
+  <meta property="qc:admins" content="4361253037677771356375" />
 
+  <title>WOWOICE</title>
+  <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
+  <link rel="Bookmark" href="img/logo.ico" />
+
+  <script src=" http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=157170823&debug=true" type="text/javascript" charset="utf-8"></script>
+
+    <!-- ref:css css/styles.min.css -->
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.css">
   <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
@@ -14,10 +22,13 @@
   <link rel="stylesheet" href="lib/message/css/messenger.css">
   <link rel="stylesheet" href="lib/message/css/messenger-theme-future.css">
   <link rel="stylesheet" href="lib/jquery/qtip2/css/jquery.qtip.min.css">
+    <!-- endref -->
 </head>
 <body style="">
 
   <div ng-view ></div>
+
+  <!-- ref:js js/scripts.min.js -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.min.js"></script>
   <script src="lib/angular/angular-resource.min.js"></script>
@@ -35,9 +46,8 @@
   <script src="lib/soundmanager/script/soundmanager2.js"></script>
   <script src="lib/jquery/qtip2/js/jquery.qtip.min.js"></script>
 
-  <!--<script src="lib/angular-ui/ui-bootstrap-tpls-0.6.0.js"></script>-->
-
   <script src="lib/message/js/messenger.min.js"></script>
+  <script src="lib/util/md5.js"></script>
   <script src="js/util/dateFormat.js"></script>
 
   <script src="js/app.js"></script>
@@ -77,6 +87,6 @@
 <script src="lib/upload/jquery.iframe-transport.js"></script>
 <script src="lib/upload/jquery.fileupload.js"></script>
 <script src="lib/typeahead.js/typeahead.min.js"></script>
-
+  <!-- endref -->
 </body>
 </html>
