--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="wooice">
+<html lang="en" ng-app="wooice"  xmlns:wb="http://open.weibo.com/wb">
 <head>
   <meta charset="utf-8">
   <meta property="wb:webmaster" content="371bd3642058ba5d" />
@@ -10,6 +10,7 @@
   <link rel="Bookmark" href="img/logo.ico" />
 
   <script src=" http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=157170823&debug=true" type="text/javascript" charset="utf-8"></script>
+  <script src="http://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="100565532" data-redirecturi=""  type="text/javascript" charset="utf-8"></script>
 
     <!-- ref:css css/styles.min.css -->
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
