--- a/app/lib/bootstrap-switch-master/examples/index.html
+++ b/app/lib/bootstrap-switch-master/examples/index.html
@@ -916,7 +916,7 @@ $('#disable-switch').bootstrapSwitch('setActive', false);  // true || false</pre
 </script>
 
     <footer>
-        <div class="container-fluid">
+        <div class="container">
             <p style="float:left; padding-top: 5px;">
                 &copy; by
                 <a href="http://larentis.eu" target="_blank">Mattia Larentis</a> (<a href="https://twitter.com/SpiritualGuru">@SpiritualGuru</a>)
