--- a/app/listview.html
+++ b/app/listview.html
@@ -43,7 +43,7 @@
 					<li><a href="/index.html"><i class="icon-home icon-white"></i>
 							Home</a></li>
 					<li class="divider-vertical"></li>
-					<li class="dropdown"><a href="#/profile/"
+					<li class="dropdown"><a href="profile/"
 						class="dropdown-toggle" data-toggle="dropdown"> <i
 							class="icon-eye-open icon-white"></i> Profile <b class="caret"></b>
 					</a>
