--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
         <link rel="stylesheet" href="lib/jquery/qtip2/css/jquery.qtip.min.css">
     <!-- endref -->
 </head>
-<body style="padding-bottom: 50px;padding-top: 90px;">
+<body style="padding-bottom: 50px;padding-top: 90px;" ng-controller="pageCtrl">
 
 <div ng-view></div>
 
@@ -77,6 +77,7 @@
     <script src="js/services/commonServices.js"></script>
     <script src="js/services/playListService.js"></script>
     <script src="js/services/proServices.js"></script>
+    <script src="js/controllers/pageCtrl.js"></script>
     <script src="js/controllers/headerControllers.js"></script>
     <script src="js/controllers/userStreamController.js"></script>
     <script src="js/controllers/streamControllers.js"></script>
