--- a/app/index.html
+++ b/app/index.html
@@ -22,12 +22,13 @@
         <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="lib/Buttons/css/buttons.css">
-        <link rel="stylesheet" href="css/app.css"/>
+        <link rel="stylesheet" href="lib/jquery-ui-custom/css/smoothness/jquery-ui-1.10.4.custom.min.css">
         <link rel="stylesheet" href="css/upload/jquery.fileupload-ui.css">
         <link rel="stylesheet" href="lib/typeahead.js/typeahead.js-bootstrap.css">
         <link rel="stylesheet" href="lib/message/css/messenger.css">
         <link rel="stylesheet" href="lib/message/css/messenger-theme-future.css">
         <link rel="stylesheet" href="lib/jquery/qtip2/css/jquery.qtip.min.css">
+        <link rel="stylesheet" href="css/app.css"/>
     <!-- endref -->
 </head>
 <body style="padding-bottom: 50px;padding-top: 90px;" ng-controller="pageCtrl">
@@ -41,6 +42,10 @@
     <ng-include src="'partials/modals/login.html'"></ng-include>
 
 <!-- ref:js js/scripts.min.<%= buildNumber %>.js -->
+    <script src="lib/jquery/jquery-2.0.2.min.js"></script>
+    <script src="lib/jquery/jquery.cookie.js"></script>
+    <script src="lib/jquery-ui-custom/js/jquery-ui-1.10.4.custom.min.js"></script>
+
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>
     <script src="lib/angular/angular-resource.min.js"></script>
@@ -48,9 +53,8 @@
     <script src="lib/angular/angular-cookies.min.js"></script>
     <script src="lib/angular-storage/angularLocalStorage.js"></script>
     <script src="lib/angular-ui/ui-bootstrap-tpls-0.6.0.js"></script>
+    <script src="lib/angular-slider/slider.js"></script>
 
-    <script src="lib/jquery/jquery-2.0.2.min.js"></script>
-    <script src="lib/jquery/jquery.cookie.js"></script>
     <script src="lib/underscore.js/underscore-min.js"></script>
     <script src="lib/underscore.js/underscore.string.min.js"></script>
 
