set up new tag select panel

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,12 @@
         <link rel="stylesheet" href="lib/jquery/qtip2/css/jquery.qtip.min.css">
         <link rel="stylesheet" href="css/app.css"/>
     <!-- endref -->
+
+    <style>
+        html {
+            overflow-y: scroll
+        }
+    </style>
 </head>
 <body style="padding-bottom: 50px;padding-top: 90px;" ng-controller="pageCtrl">
 
