refine sound upload

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="wooice" xmlns:wb="http://open.weibo.com/wb">
+    <html lang="en" ng-app="wooice" xmlns:wb="http://open.weibo.com/wb">
 <head>
     <meta charset="utf-8">
     <base href="/">
@@ -9,7 +9,7 @@
     <meta property="qc:admins" content="4361253037677771356375"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>WOWOICE</title>
+    <title>WOWOICE - 总有一个人需要你的声音</title>
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
     <link rel="Bookmark" href="img/logo.ico"/>
 
@@ -58,7 +58,7 @@
     <script src="lib/angular/angular-animate.min.js"></script>
     <script src="lib/angular/angular-cookies.min.js"></script>
     <script src="lib/angular-storage/angularLocalStorage.js"></script>
-    <script src="lib/angular-ui/ui-bootstrap-tpls-0.6.0.js"></script>
+    <script src="lib/angular-ui/ui-bootstrap-tpls-0.10.0.js"></script>
     <script src="lib/angular-slider/slider.js"></script>
 
     <script src="lib/underscore.js/underscore-min.js"></script>
