--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <meta property="qc:admins" content="4361253037677771356375"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>WOWOICE - 总有一个人需要你的声音</title>
+    <title>发声 & 分享</title>
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
     <link rel="Bookmark" href="img/logo.ico"/>
 
@@ -41,6 +41,10 @@
 
 <div ng-view></div>
 
+<p id="back_top" class="hidden-xs">
+    <a><span></span></a>
+</p>
+
     <ng-include src="'partials/modals/forbidden.html'"></ng-include>
     <ng-include src="'partials/modals/notFound.html'"></ng-include>
     <ng-include src="'partials/modals/error.html'"></ng-include>
@@ -67,6 +71,7 @@
     <script src="lib/bootstrap/js/bootstrap.js"></script>
     <script src="lib/soundmanager/script/soundmanager2.js"></script>
     <script src="lib/jquery/qtip2/js/jquery.qtip.min.js"></script>
+    <script src="lib/blur/blur.js"></script>
 
     <script src="lib/message/js/messenger.min.js"></script>
     <script src="lib/util/md5.js"></script>
